chore: update test example for uber jar